# uoa-med-personal-timetable

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: 404.html  index.html
docs/2025/sem1/y2/: auid101550118.ics  auid103203128.ics  auid103647327.ics  auid104510322.ics  auid105280055.ics  auid110054845.ics  auid110210342.ics  auid111085715.ics  auid113425003.ics  auid117313248.ics  auid118469519.ics  auid124472044.ics  auid125564274.ics  auid127581465.ics  auid128361675.ics  auid1284797.ics  auid129184439.ics  auid129787029.ics  auid136238976.ics  auid140596979.ics  auid146166064.ics  auid1504788.ics  auid154548628.ics  auid154820935.ics  auid155560274.ics  auid156069954.ics  auid157912341.ics  auid158239099.ics  auid159364545.ics  auid161995389.ics  auid162857551.ics  auid163995753.ics  auid165658136.ics  auid172091545.ics  auid176997009.ics  auid177464072.ics  auid178588034.ics  auid182141788.ics  auid182241746.ics  auid182834277.ics  (+305 more)
docs/2025/sem1/y3/: auid101945275.ics  auid104071833.ics  auid106307467.ics  auid108923239.ics  auid111309758.ics  auid113233363.ics  auid114699413.ics  auid117994106.ics  auid119496439.ics  auid121866128.ics  auid123589769.ics  auid126525154.ics  auid128712252.ics  auid129092948.ics  auid135051499.ics  auid135322770.ics  auid136986317.ics  auid137318433.ics  auid137495341.ics  auid138791740.ics  auid139767451.ics  auid140888760.ics  auid141257186.ics  auid152207088.ics  auid152848547.ics  auid1540578.ics  auid1558727.ics  auid161411908.ics  auid173071060.ics  auid175840644.ics  auid176993925.ics  auid181799401.ics  auid184056595.ics  auid184708944.ics  auid188093051.ics  auid190501472.ics  auid199114743.ics  auid201293708.ics  auid204722197.ics  auid206878187.ics  (+289 more)
docs/2025/sem2/y2/: auid101550118.ics  auid103203128.ics  auid103647327.ics  auid104510322.ics  auid105280055.ics  auid110054845.ics  auid110210342.ics  auid111085715.ics  auid113425003.ics  auid117313248.ics  auid118469519.ics  auid124472044.ics  auid125564274.ics  auid127581465.ics  auid128361675.ics  auid1284797.ics  auid129184439.ics  auid129787029.ics  auid136238976.ics  auid140596979.ics  auid146166064.ics  auid1504788.ics  auid154548628.ics  auid154820935.ics  auid155560274.ics  auid156069954.ics  auid157912341.ics  auid158239099.ics  auid159364545.ics  auid161995389.ics  auid162857551.ics  auid163995753.ics  auid165658136.ics  auid172091545.ics  auid176997009.ics  auid177464072.ics  auid178588034.ics  auid182141788.ics  auid182241746.ics  auid182834277.ics  (+305 more)
docs/2025/sem2/y3/: auid101945275.ics  auid104071833.ics  auid106307467.ics  auid108923239.ics  auid111309758.ics  auid113233363.ics  auid114699413.ics  auid117994106.ics  auid119496439.ics  auid121866128.ics  auid123589769.ics  auid126525154.ics  auid128712252.ics  auid129092948.ics  auid135051499.ics  auid135322770.ics  auid136986317.ics  auid137318433.ics  auid137495341.ics  (+306 more)
src/uoa_med_personal_timetable/: __init__.py  date.py  event.py  gp.py  html_.py  main.py  parse.py  person.py  script.py
src/uoa_med_personal_timetable/archive/: event.py  gp.py  html_.py  main.py
tests/uoa_med_personal_timetable/: test_main.py
(+1054 files in other folders)
