[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "uoa-med-personal-timetable"
version = "0.1.0"
description = "A utility for creating personalized iCalendar files for University of Auckland Med students."
readme = "README.md"
authors = [
  { name = "Nathan McDougall", email = "nathan.j.mcdougall@gmail.com" },
]
requires-python = ">=3.11.6"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "ics>=0.7.2",
  "polars>=1.23.0",
  "pydantic>=2.10.6",
  "tqdm>=4.67.1",
  "tzdata>=2025.1",
]

[dependency-groups]
dev = [
  "deptry>=0.23.0",
  "ipykernel>=6.29.5",
  "ipython>=8.32.0",
  "pre-commit>=4.1.0",
  "ruff>=0.9.7",
]
test = [
  "coverage[toml]>=7.6.12",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 88

src = [ "src" ]
lint.select = [
  "A",
  "C4",
  "E4",
  "E7",
  "E9",
  "EM",
  "ERA",
  "F",
  "FURB",
  "I",
  "N",
  "PLE",
  "PLR",
  "PT",
  "RUF",
  "SIM",
  "T20",
  "UP",
]
lint.ignore = [ "PLR2004", "SIM108" ]

[tool.pyproject-fmt]
keep_full_version = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = [ "--import-mode=importlib" ]
filterwarnings = [ "error" ]

[tool.coverage.run]
source = [ "src" ]
omit = [ "*/pytest-of-*/*" ]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "assert_never(.*)",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[tool.uv]
default-groups = [ "test", "dev" ]
